--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inline-radio-10" value="90">
       <label class="form-check-label" for="inline-radio-10">91~99</label>
     </div>
+    <hr class="pb-3">
     <div id="content">
       
     </div>
@@ -105,7 +106,7 @@
           frames += '<div class="object object-non" data-toggle="tooltip" data-placement="top" data-trigger="hover" data-title="'+frameCount+'s"></div>';
         }
       }
-      frames += '</div>';
+      frames += '</div><hr>';
       content += header;
       content += frames;
     }
